--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,43 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+   background-color: #f4f4f4; 
+  font-family: Arial, sans-serif; 
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #009632; 
+  color: rgb(9, 0, 0);
+  padding: 10px;
+  font-size: 1em;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.person-list {
+  list-style-type: none; 
+  padding: 10px;
 }
+
+.person-item {
+  background-color: rgba(14, 165, 182, 0.877); 
+  border: 1px solid #ddd; 
+  margin: 10px auto; 
+  padding: 20px;
+  max-width: 100em; 
+}
+
+.person-image {
+  width: 180px;
+  height:180px;
+  border-radius: 50%; 
+  margin-right: 50px;
+  border: 3px solid #009688;
+}
+
+.person-details {
+  display: inline-block; 
+  text-align: center; 
+   
+}
+
 
 @keyframes App-logo-spin {
   from {
